changed css image links

--- a/app/assets/stylesheets/pages.css.sass
+++ b/app/assets/stylesheets/pages.css.sass
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body
-  background-image: url('black_paper.png')
+  background-image: url(image_path('black_paper.png'))
 
 select
   width: 164px
@@ -34,7 +34,7 @@ input[type="submit"]
   margin-bottom: 20px
 
 .container
-  background-image: url('tweed.png') 
+  background-image: url(image_path('tweed.png'))
   border-right: 5px solid #333333
   border-bottom: 5px solid #333333
 
@@ -43,7 +43,7 @@ input[type="submit"]
   padding: 40px
 
 #signed_user
-  background-image: url('oldpaper.jpg')
+  background-image: url(image_path('oldpaper.jpg'))
   border-right: 3px solid #333333
   border-bottom: 3px solid #333333
   height: auto
